examples/invalid-resources/deployment-exceed-cpu.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend-exceed-cpu
  namespace: orange
  labels:
    service: web-frontend-exceed-cpu
    version: v3
    team: orange
spec:
  replicas: 1
  selector:
    matchLabels:
      service: web-frontend-exceed-cpu
      version: v3
      team: orange
  strategy: {}
  template:
    metadata:
      labels:
        service: web-frontend-exceed-cpu
        version: v3
        team: orange
    spec:
      containers:
      - image: nginx
        name: nginx
        resources:
          requests:
            cpu: "2"
            memory: "2Gi"
          limits:
            cpu: "3"
            memory: "3Gi"
