examples/invalid-resources/deployment-host-file-system.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend-privileged
  labels:
    service: web-frontend-privileged
    version: v2
    team: orange
spec:
  replicas: 1
  selector:
    matchLabels:
      service: web-frontend-privileged
      version: v2
      team: orange
  strategy: {}
  template:
    metadata:
      labels:
        service: web-frontend-privileged
        version: v2
        team: orange
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
        volumeMounts:
          - mountPath: /cache
            name: cache-volume
            readOnly: true
      volumes:
        - name: cache-volume
          hostPath:
            path: /tmp # directory location on host
