examples/invalid-resources/deployment-host-namespace.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend-host-namespace
  labels:
    service: web-frontend-host-namespace
    version: v2
    team: orange
spec:
  replicas: 1
  selector:
    matchLabels:
      service: web-frontend-host-namespace
      version: v2
      team: orange
  strategy: {}
  template:
    metadata:
      labels:
        service: web-frontend-host-namespace
        version: v2
        team: orange
    spec:
      hostPID: true
      hostIPC: true
      containers:
      - image: nginx
        name: nginx
        resources: {}
