examples/invalid-resources/deployment-host-network.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend-host-network
  labels:
    service: web-frontend-host-network
    version: v2
    team: orange
spec:
  replicas: 1
  selector:
    matchLabels:
      service: web-frontend-host-network
      version: v2
      team: orange
  strategy: {}
  template:
    metadata:
      labels:
        service: web-frontend-host-network
        version: v2
        team: orange
    spec:
      hostNetwork: true
      containers:
      - image: nginx
        name: nginx
        resources: {}
