examples/invalid-resources/deployment-missing-labels.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend
  namespace: orange
  labels:
    service: web-frontend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      service: web-frontend
  strategy: {}
  template:
    metadata:
      labels:
        service: web-frontend
        version: v1
        team: orange
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
