examples/invalid-resources/deployment-privileged-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-frontend-privileged
  namespace: orange
  labels:
    service: web-frontend-privileged
    version: v2
    team: orange
spec:
  replicas: 1
  selector:
    matchLabels:
      service: web-frontend-privileged
      version: v2
      team: orange
  strategy: {}
  template:
    metadata:
      labels:
        service: web-frontend-privileged
        version: v2
        team: orange
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
        securityContext:
          privileged: true
