examples/invalid-resources/ingress-fordbidden-domain.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  labels:
    service: web-frontend
    version: v1
    team: orange
spec:
  rules:
  - host: www.example.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
